Switched from hook to RestduxService

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-restdux",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A practical REST API data store for React with Redux",
   "author": "Sergei Zelentsov <sergei@tapkey.pro>",
   "license": "MIT",
@@ -30,7 +30,7 @@
     "state",
     "react-redux"
   ],
-  "peerDependencies": {
+  "dependencies": {
     "react-redux": "^7.0.0",
     "react-thunk": "^1.0.0",
     "qs": "^6.0.0",
@@ -39,6 +39,7 @@
   "devDependencies": {
     "typescript": "~3.5.3",
     "@types/react-redux": "^7.0.0",
+    "@types/redux-thunk": "^2.1.0",
     "@types/qs": "^6.0.0",
     "@types/axios": "^0.14.0"
   }
